--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -50,43 +50,47 @@
                 Valencia:
             </h3>
             <ul class="barangay-columns text-center list-unstyled fs-5 mb-0" style="color: rgb(0, 0, 0);">
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>Municipality Hall:</h5> (035) 226 - 3592, 522 0242, 423 4078
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>Tourism Office:</h5> (035) 423 - 8339
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>Assessor Office:</h5> (035) 226 - 8046
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>Municipal Civil Registrar MCR:</h5> (035) 226 - 3598
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>Treasurer Office:</h5> (035) 225 - 3014, 423 8176
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>Health Center:</h5> (035) 423 8249 - Rural Health Unit serve as Hospital of Valencia
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>Police Hotline:</h5> (035) 225 3031 / 0927 983 2648
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>Fire Station:</h5> (035) 423 8316
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>Engineering Office:</h5> (035) 423 - 8189
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>DepEd Elementary:</h5> (035) 423 - 8217
                 </li>
-                <li class = "p-3">
+                <li class="p-3">
                     <h5>DSWD:</h5> (035) 226 - 2518
                 </li>
             </ul>
         </div>
     </div>
-
+    <div class="container pb-5">
+        <div class="d-flex justify-content-center align-items-center">
+            <a href="#top" class="btn btn-primary">Back to the Top</a>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
